Update Insta UI layout and fix image cropping

--- a/04_inStaUI.css
+++ b/04_inStaUI.css
@@ -7,36 +7,36 @@
 html, body {
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 .wrapper{
     width: 100%;
+    height: 100vh;
     position: relative;
     background-color:white ;
    padding: 20px;
 }
 .instacontainer{
 width: 100%;
-height: 100vh;
+height: 100%;
 display: flex;
 border-radius: 30px;
 }
 .leftdiv{
     width: 25%;
+    height: 100%;
     background-color: white;
     display: flex;
     flex-direction: column;
 }
 .rightdiv{
     width:75%;
+    height: 100%;
     background:#F6F6F6;
     border-radius:30px;
     display:flex;
     flex-direction:column;
-    height:100vh;
+    overflow: hidden;
 }
-
-
 .insta{
     display: flex;
     justify-content: flex-start;
@@ -56,7 +56,6 @@ border-radius: 30px;
     width: 100%;
 }
 .content{
-height: 200px;
     width: 100%;
     padding: 20px;
     display: flex;
@@ -129,8 +128,8 @@ height: 200px;
     align-items: center;
     overflow-x: auto;
     gap: 10px;
-     padding: 10px;
-     scrollbar-width: none;
+    padding: 10px;
+    scrollbar-width: none;
 }
 .circle-wrapper {
     display: flex;
@@ -152,7 +151,6 @@ height: 200px;
 }
 .sixthdiv{
     width: 100%;
-    flex-grow: 1;
     display: flex;
 }
 .icons{
@@ -328,14 +326,17 @@ padding-left: 18px;
   padding: 1px;
 }
 
-.posts img{
-  height: 200px;
-  width: 200px;
-}
+
 .topthird{
-  max-width:600px;
+  flex:1;
+  display:flex;
+  flex-direction:column;
+  max-width:850px;
   margin:auto;
+  min-height:0;  
 }
+
+
 
 .Feed{
   padding: 15px;
@@ -370,13 +371,17 @@ padding: 1px;
   border-radius:16px;
   margin-bottom:25px;
   padding-bottom:10px;
+  overflow: hidden;
 }
 
+
 .photu img{
-  height: auto;
   width: 100%;
-  object-fit: contain;
+  max-height: 420px;
+  object-fit: cover;
+  
 }
+
 .likes{
 display: flex;
 align-items: center;
@@ -399,8 +404,10 @@ padding: 10px;
 .containu{
   flex:1;
   overflow-y:auto;
-  min-height:0;
+  scrollbar-width: none;
 }
+
+
 
 
 
